
# Changes

## Releases from [chrisant996/clink](https://github.com/chrisant996/clink) fork

### v1.1.2-alpha

- Added `history.max_lines` setting that controls how many lines of command history to save (1 to 50000, default is 2500).
- Revert the change to disallow mixing file/directory/symlink with other match types (it broke the tests and certain completion scenarios).
- Fixed crash in `insert-completions` due to heap failure (introduced by the performance chnages for displaying matches).
- Fixed `tilde-expand` for quoted text.
- Fixed <kbd>Esc</kbd> in Readline's digit argument input mode (it doesn't try to cancel the mode, because that's not how Readline is documented to work).
- `addmatch()` in Lua scripts takes an optional match type argument.
- Set locale to UTF8 much earlier to avoid quirky behavior early in script processing.

### v1.1.1-alpha

- Exclusively use Readline's completion implementation.  This (with fixes and enhancements in Readline itself) makes the completion experience much nicer and more sophisticated, and removes a lot of code that was added in v1.0.0a0.
- Exclusively use Readline's key binding implementation.  This makes it possible to have a single consistent way to set key bindings (inputrc) and for `clink-show-help` to list all key bindings, and removes a lot of code that was added in v1.0.0a0.
- Converted all of clink's internal key behaviors to be implemented as commands that can be bound in the inputrc file.
- Rewrote and refactored the pagination routine to be used in multiple places.
- Fixed prompt filtering to correctly use the specified priority order.
- Readline library:
    - Updated the Readline library from v6.2 to v8.0.  This picked up lots of bug fixes and new capabilities (for example colored completions).
    - Changed Readline to support backslash as a path separator.
    - The pager prompt in Readline is optionally colored, controlled by the `colour.interact` clink setting.